--- a/DS2_Unit2_Sprint5_Day_3_Submission.ipynb
+++ b/DS2_Unit2_Sprint5_Day_3_Submission.ipynb
@@ -42,24 +42,25 @@
       },
       "cell_type": "markdown",
       "source": [
-        "## Day 3"
+        "## Day 3 - RandomForestClassifier"
       ]
     },
     {
       "metadata": {
         "id": "4I_qBn0WZ0hD",
         "colab_type": "code",
+        "outputId": "b5dd21d6-c2da-4373-cad7-8901034a2c58",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 370
-        },
-        "outputId": "b5dd21d6-c2da-4373-cad7-8901034a2c58"
+        }
       },
       "cell_type": "code",
       "source": [
+        "# for colab must re-upload files after running this\n",
         "!pip install category_encoders"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -87,11 +88,11 @@
       "metadata": {
         "id": "CZdf0o2EZIGk",
         "colab_type": "code",
+        "outputId": "c21dca30-a135-4b74-d01e-ecb11f565680",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 2278
-        },
-        "outputId": "c21dca30-a135-4b74-d01e-ecb11f565680"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -170,9 +171,10 @@
         "\n",
         "submission_out_file = \"submission-day3.csv\"\n",
         "submission.to_csv(submission_out_file, index=False)\n",
-        "print(\"--- Run time: %s seconds ---\" % (time.time() - start_time))"
+        "print(\"--- Run time: %s seconds ---\" % (time.time() - start_time))\n",
+        "# Best score so far: 0.81111"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
