--- a/DS2_Unit2_Sprint5_Day_1_Submission.ipynb
+++ b/DS2_Unit2_Sprint5_Day_1_Submission.ipynb
@@ -50,17 +50,18 @@
       "metadata": {
         "id": "d-QjA434wc3G",
         "colab_type": "code",
+        "outputId": "1776b54d-d5f4-45e7-984f-6025d78403d2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 370
-        },
-        "outputId": "1776b54d-d5f4-45e7-984f-6025d78403d2"
+        }
       },
       "cell_type": "code",
       "source": [
+        "# for colab must re-upload files after running this\n",
         "!pip install category_encoders"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -139,11 +140,11 @@
       "metadata": {
         "id": "CrYYA-lQ2Nhr",
         "colab_type": "code",
+        "outputId": "5d7bfc89-062f-4540-c031-dc46e23cd304",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 2771
-        },
-        "outputId": "5d7bfc89-062f-4540-c031-dc46e23cd304"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -169,7 +170,7 @@
         "print(train_features.isnull().sum().sum())\n",
         "print(test_features.isnull().sum().sum())\n"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -345,11 +346,11 @@
       "metadata": {
         "id": "-wOYkMqC2gDJ",
         "colab_type": "code",
+        "outputId": "76b03b9b-f4cb-4476-ee60-92d77e568668",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 564
-        },
-        "outputId": "76b03b9b-f4cb-4476-ee60-92d77e568668"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -365,7 +366,7 @@
         "print(\"\\ntrain_features.describe() non-numeric:\")\n",
         "print(train_features.describe(exclude=np.number))\n"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -410,11 +411,11 @@
       "metadata": {
         "id": "LBR1RoLg2kmP",
         "colab_type": "code",
+        "outputId": "e62e5aed-b600-454e-9ae9-4aa3a1782293",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 482
-        },
-        "outputId": "e62e5aed-b600-454e-9ae9-4aa3a1782293"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -444,7 +445,7 @@
         "print(\"\\nX_train.describe():\")\n",
         "print(X_train.describe())\n"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -483,11 +484,11 @@
       "metadata": {
         "id": "6WKNA6Kp24H9",
         "colab_type": "code",
+        "outputId": "4e46cce6-7dcc-45b2-b34b-4a27fd6febfd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "4e46cce6-7dcc-45b2-b34b-4a27fd6febfd"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -511,7 +512,7 @@
         "y_pred = model.predict(X_val_scaled)\n",
         "print(\"LogisticRegression w/ StandardScaler roc_auc_score Score:\", roc_auc_score(y_val, y_pred))\n"
       ],
-      "execution_count": 14,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -527,11 +528,11 @@
       "metadata": {
         "id": "n-UC2hAa2-gt",
         "colab_type": "code",
+        "outputId": "dffc9e09-0e83-4f89-b880-586d2217dc6a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "dffc9e09-0e83-4f89-b880-586d2217dc6a"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -546,7 +547,7 @@
         "y_pred = pipeline.predict(X_val)\n",
         "print(\"LogisticRegression w/ pipeline roc_auc_score Score:\", roc_auc_score(y_val, y_pred))\n"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -561,11 +562,11 @@
       "metadata": {
         "id": "frulUWPo3F6_",
         "colab_type": "code",
+        "outputId": "473cfcab-45a7-4de8-c8de-34999820d01b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 476
-        },
-        "outputId": "473cfcab-45a7-4de8-c8de-34999820d01b"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -590,7 +591,7 @@
         "y_pred = pipeline.predict(X_val)\n",
         "print(\"LogisticRegression w/ One-hot encode roc_auc_score Score:\", roc_auc_score(y_val, y_pred))\n"
       ],
-      "execution_count": 16,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -631,11 +632,11 @@
       "metadata": {
         "id": "E0qYjpwdtaM6",
         "colab_type": "code",
+        "outputId": "c31a0c44-c0b7-463e-800c-44c457f3c26b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 612
-        },
-        "outputId": "c31a0c44-c0b7-463e-800c-44c457f3c26b"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -657,9 +658,10 @@
         "print(submission.status_group.value_counts())\n",
         "\n",
         "submission_out_file = \"submission-day1.csv\"\n",
-        "submission.to_csv(submission_out_file, index=False)"
+        "submission.to_csv(submission_out_file, index=False)\n",
+        "# Best score so far: 0.73227"
       ],
-      "execution_count": 18,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
