--- a/DS2_Unit2_Sprint5_Day_1_Submission.ipynb
+++ b/DS2_Unit2_Sprint5_Day_1_Submission.ipynb
@@ -43,7 +43,8 @@
       },
       "cell_type": "markdown",
       "source": [
-        "## Day 1"
+        "## Day 1 - LogisticRegressions\n",
+        "doesn't handle \"functional needs repair\" (maps it to \"functional\")"
       ]
     },
     {
