Added two features, improved score

--- a/DS2_Unit2_Sprint5_Day_4_Submission.ipynb
+++ b/DS2_Unit2_Sprint5_Day_4_Submission.ipynb
@@ -49,11 +49,11 @@
       "metadata": {
         "id": "dorwL49Ujlk_",
         "colab_type": "code",
+        "outputId": "a74e5b54-cb87-4573-d1a0-3957548e3bf2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 2856
-        },
-        "outputId": "a74e5b54-cb87-4573-d1a0-3957548e3bf2"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -94,6 +94,66 @@
         "# create age feature\n",
         "train_features['newer'] = (train_features.construction_year > 1998).map({True : 1, False : 0})\n",
         "test_features['newer'] = (test_features.construction_year > 1998).map({True : 1, False : 0})\n",
+        "\n",
+        "# create area feature\n",
+        "train_features['area'] = train_features.region.replace({'Iringa' : 2,\n",
+        "                                                        'Arusha' : 1,\n",
+        "                                                        'Manyara' : 1,\n",
+        "                                                        'Shinyanga' : 0,\n",
+        "                                                        'Mbeya' : 0,\n",
+        "                                                        'Kilimanjaro' : 0,\n",
+        "                                                        'Morogoro' : 0,\n",
+        "                                                        'Kagera' : 0,\n",
+        "                                                        'Mwanza' : 0,\n",
+        "                                                        'Kigoma' : 0,\n",
+        "                                                        'Ruvuma' : 0,\n",
+        "                                                        'Pwani' : 0,\n",
+        "                                                        'Tanga' : 0,\n",
+        "                                                        'Dodoma' : 0,\n",
+        "                                                        'Singida' : 0,\n",
+        "                                                        'Mara' : 0,\n",
+        "                                                        'Dar es Salaam' : 0,\n",
+        "                                                        'Tabora' : -1,\n",
+        "                                                        'Rukwa' : -1,\n",
+        "                                                        'Lindi' : -2,\n",
+        "                                                        'Mtwara' : -2})\n",
+        "test_features['area'] = test_features.region.replace({'Iringa' : 2,\n",
+        "                                                      'Arusha' : 1,\n",
+        "                                                      'Manyara' : 1,\n",
+        "                                                      'Shinyanga' : 0,\n",
+        "                                                      'Mbeya' : 0,\n",
+        "                                                      'Kilimanjaro' : 0,\n",
+        "                                                      'Morogoro' : 0,\n",
+        "                                                      'Kagera' : 0,\n",
+        "                                                      'Mwanza' : 0,\n",
+        "                                                      'Kigoma' : 0,\n",
+        "                                                      'Ruvuma' : 0,\n",
+        "                                                      'Pwani' : 0,\n",
+        "                                                      'Tanga' : 0,\n",
+        "                                                      'Dodoma' : 0,\n",
+        "                                                      'Singida' : 0,\n",
+        "                                                      'Mara' : 0,\n",
+        "                                                      'Dar es Salaam' : 0,\n",
+        "                                                      'Tabora' : -1,\n",
+        "                                                      'Rukwa' : -1,\n",
+        "                                                      'Lindi' : -2,\n",
+        "                                                      'Mtwara' : -2})\n",
+        "\n",
+        "# create payment feature\n",
+        "train_features['pmt'] = train_features.payment_type.replace({'annually' : 2,\n",
+        "                                                             'never pay' : 0,\n",
+        "                                                             'unknown' : 0,\n",
+        "                                                             'on failure' : 0,\n",
+        "                                                             'other' : 0,\n",
+        "                                                             'per bucket' : 1,\n",
+        "                                                             'monthly' : 1})\n",
+        "test_features['pmt'] = test_features.payment_type.replace({'annually' : 2,\n",
+        "                                                           'never pay' : 0,\n",
+        "                                                           'unknown' : 0,\n",
+        "                                                           'on failure' : 0,\n",
+        "                                                           'other' : 0,\n",
+        "                                                           'per bucket' : 1,\n",
+        "                                                           'monthly' : 1})\n",
         "\n",
         "print(\"\\ntrain_features unique nonumeric values\")\n",
         "print(train_features.select_dtypes(exclude=np.number).nunique())\n",
@@ -139,9 +199,9 @@
         "submission_out_file = \"submission-day4.csv\"\n",
         "submission.to_csv(submission_out_file, index=False)\n",
         "print(\"--- Run time: %s seconds ---\" % (time.time() - start_time))\n",
-        "# Best score so far: 0.81529"
+        "# Best score so far: 0.81529 ==>> NOW 0.81766!"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
